fixed spacing on social icons

--- a/general.css
+++ b/general.css
@@ -129,7 +129,7 @@ a:hover {
 	
 	width: 30px;
 	height: 30px;
-	margin: 1rem 0 1rem 1rem;
+	margin: 1rem .25rem;
 	text-align: center;
 	padding: 0.5rem;
 	
